# railbot

./: CONTRIBUTING.md  README.md  brew_dependencies.txt  dependencies_install.sh  env.sh  install.sh  install2.sh  requirements-dev.txt  requirements.txt  run.sh  setup.sh
docs/: architecture-thoughts.md  camera.md  create-message-type.md  create_package.md  jupyter.md  transcription.md  whisper.md
gpt_interfaces/: package.xml
gpt_robot/: package.xml  readme.md  setup.py
gpt_robot/gpt_robot/: gpt_robot.py  mini_pupper_robot.py
mini_pupper_robot/: package.xml  readme.md  setup.cfg  setup.py
mini_pupper_robot/mini_pupper_robot/: mini_pupper_robot.py
notebooks/: ROS2_Keyboard_Input.ipynb  ROS2_Turtlesim_KeyboardControl.ipynb  ROS_3D_Robot_Model.ipynb  ROS_Joint_States.ipynb
notebooks/.ipynb_checkpoints/: ROS2_Keyboard_Input-checkpoint.ipynb  ROS2_Turtlesim_KeyboardControl-checkpoint.ipynb
openai_audio/: package.xml  readme.md  setup.cfg  setup.py
openai_audio/openai_audio/: audio_input.py  audio_output.py
railbot_bringup/: package.xml  readme.md  setup.cfg  setup.py
railbot_bringup/launch/: macos_launch.py  mini_pupper_launch.py  raspberry_pi_launch.py
railbot_cam/: package.xml  setup.cfg  setup.py
railbot_cam/railbot_cam/: openai_image.py  person_sub.py  webcam_identify.py  webcam_pub.py  webcam_sub.py
railbot_interfaces/: CMakeLists.txt  package.xml
railbot_interfaces/msg/: Person.msg
railbot_main/: package.xml  readme.md  setup.cfg  setup.py
railbot_main/railbot_main/: chat_llm_service.py
railbot_status/: package.xml  setup.cfg  setup.py
(+2 files in other folders)
