<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openai_audio</name>
  <version>0.0.2</version>
  <description>Read audio in fixed size chunks and transcribe using OpenAI STT, and do the same in reverse</description>
  <maintainer email="dan@gravityrail.com">Daniel Walmsley</maintainer>
  <license>Apache-2.0</license>

  <depend>railbot_status</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
